[desc]Bootstrap added

--- a/app/views/rohubdemopage.scala.html
+++ b/app/views/rohubdemopage.scala.html
@@ -84,47 +84,16 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                    This is a well that is a great spot for a business tagline or phone number for easy access!
+                     Last recently added 5 research objects
+                     <!-- some kind of object -->
+                     
                 </div>
             </div>
             <!-- /.col-lg-12 -->
         </div>
         <!-- /.row -->
-
-        <!-- Content Row -->
-        <div class="row">
-            <div class="col-md-4">
-                <h2>Add new randomly generated task</h2>
-                <!--  
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                -->
-                <a class="btn btn-default" href="#" onclick="addNewRandomTaskToDB()">Add new task</a>
-            </div>
-            <!-- /.col-md-4 -->
-            <div class="col-md-4">
-                <h2>All saved tasks</h2>
-                <!-- 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe rem nisi accusamus error velit animi non ipsa placeat. Recusandae, suscipit, soluta quibusdam accusamus a veniam quaerat eveniet eligendi dolor consectetur.</p>
-                 -->
-                 <table id="records_table" border='1'>
-				    <tr>	
-				        <th>Task ID</th>
-				        <th>Task Name</th>
-				        <th>Task Date</th>	
-				    </tr>
-				</table>
-				<br></br>
-                <a class="btn btn-default" href="#" onclick="showAllTasksInTable()">Get all saved tasks</a>
-            </div>
-            <!-- /.col-md-4 -->
-            <div class="col-md-4">
-                <h2>Delete task</h2>
-                <p>Put id with task which you want to delete</p>
-                <input type="text" name="taskid" id="taskid">
-                <a class="btn btn-default" href="#" onclick="deleteTaskById()">Delete task</a>
-            </div>
-            <!-- /.col-md-4 -->
-        </div>
+        
+        
         <!-- /.row -->
 
         <!-- Footer -->
