--- a/app/views/rohubdemopage.scala.html
+++ b/app/views/rohubdemopage.scala.html
@@ -5,19 +5,27 @@
 <!doctype html>
 <html>
 	<head>
+		
+		
+      
 		<link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
-        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
         <script src="https://code.jquery.com/jquery-2.2.1.js")" type="text/javascript"></script>
         <script src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.js")" type="text/javascript"></script>
         
         <script src="@routes.Assets.versioned("javascripts/bootstrap.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/bootstrap.min.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/small-business.css")">
+        <script src="@routes.Assets.versioned("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/tools.js")" type="text/javascript"></script>
         
-        
+          <!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.js" type="text/javascript"></script>
+		<!-- Latest compiled and minified Locales -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/locale/bootstrap-table-zh-CN.min.js" type="text/javascript"></script>
+		
 	 	<title>Tasks CRUD UI</title>	
 	</head>
 	<body>
@@ -68,8 +76,8 @@
             </div>
             <!-- /.col-md-8 -->
             <div class="col-md-4">
-                <h1>EBEAN ORM demo</h1>
-                <p>This is a simple example of ebean orm usage</p>
+                <h1>ROHUB services usage example</h1>
+                <p>Simple example of how ROHUB services are working with Play!</p>
                	<!-- 
                 <a class="btn btn-primary btn-lg" href="#">Call to Action!</a>
             	 -->
@@ -84,9 +92,59 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="well text-center">
-                     Last recently added 5 research objects
+                   10 Last added RO
                      <!-- some kind of object -->
-                     
+                    <!--BEGIN-Bootstrap dropdown list -->
+                  
+						<div id="abc">
+						 <!-- btn-group --> 
+						  				<div id="hatch" class="btn-group"><button type="button" class="btn dropdown-toggle" 
+						  				data-toggle="dropdown">Last added RO's list</button>
+						                   <ul class="dropdown-menu">
+						                  </ul>
+						              </div>
+						<!-- /btn-group -->
+						</div>
+						
+						<div id="show">
+						
+						<!-- Show the content related to the item clicked in either of the lists here --></div>
+						                  
+                 <!-- END-Bootstrap dropdown list -->  
+                 
+                </div>
+                
+                 <div class="well text-center">
+
+                     <!-- some kind of object -->
+                   
+				 <!-- BEGIN-Bootstrap RO searching -->  
+        		     <div class="container">
+						<div class="row">
+					        <div class="col-md-6">
+					    		RO Searching by keyword
+					            <div id="custom-search-input">
+					                <div class="input-group col-md-12">
+					                    <input type="text" class="form-control input-lg" placeholder="Buscar" id="keyword"/>
+					                    <span class="input-group-btn">
+					                        <button class="btn btn-info btn-lg" type="button" onclick="findROsByKeyword()">
+					                            <i class="glyphicon glyphicon-search"></i>
+					                        </button>
+					                    </span>
+					                </div>
+					            </div>
+					        </div>
+						</div>
+					  </div>
+					  <br></br>
+					  <!-- BEGIN Field with query results -->
+					 <table id="findByKeywordResultTable">
+					 
+					</table>
+					  <!-- END Field with query results -->
+					  
+                 <!-- END-Bootstrap RO searching -->  
+                 
                 </div>
             </div>
             <!-- /.col-lg-12 -->
@@ -101,6 +159,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; Your Website 2014</p>
+             
+                    
                 </div>
             </div>
         </footer>
