[desc]Another changes made

--- a/app/views/rohubdemopage.scala.html
+++ b/app/views/rohubdemopage.scala.html
@@ -125,7 +125,7 @@
 					    		RO Searching by keyword
 					            <div id="custom-search-input">
 					                <div class="input-group col-md-12">
-					                    <input type="text" class="form-control input-lg" placeholder="Buscar" id="keyword"/>
+					                    <input type="text" class="form-control input-lg" placeholder="Type keyword here" id="keyword"/>
 					                    <span class="input-group-btn">
 					                        <button class="btn btn-info btn-lg" type="button" onclick="findROsByKeyword()">
 					                            <i class="glyphicon glyphicon-search"></i>
